# operating-systems-programming

./: CMakeLists.txt
lab1/: CMakeLists.txt  many_readers_many_writers_buffer.c  many_readers_many_writers_buffer.h  many_readers_many_writers_mutex_array.c  many_readers_many_writers_mutex_array.h  many_readers_one_writer.c  many_readers_one_writer.h  many_writers_limited_readers.c  many_writers_limited_readers.h  readers_writers_critic.c  readers_writers_critic.h  writers_readers_turns.c  writers_readers_turns.h
